<?xml version="1.0" encoding="utf-8"?> <!--
  ~ Copyright (c) 2012-2014 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->
<resources>

    <string name="action_return">返回</string>
    <string name="app_name">流量风暴</string>
    <string name="copyright_others">本程序使用以下组件，下拉可查看完整授权：</string>
    <string name="about">关于</string>
    <string name="auth_username">用户名</string>
    <string name="no_keystore_cert_selected">您必须选择一个用户证书</string>
    <string name="no_error_found">未找到错误</string>
    <string name="ipv4_format_error">无法解析 IPv4 地址</string>
    <string name="custom_route_format_error">无法解析自定义路由</string>
    <string name="route_rejected">Android 拒绝了路由</string>
    <string name="tun_error_helpful">在某些自定义 ICS 版本上，/dev/tun 的权限可能会有错误，或者根本就没有该文件。请尝试系统升级或刷机。</string>
    <string name="tun_open_error">未能打开 tun 模块</string>
    <string name="error">错误</string>
    <string name="last_openvpn_tun_config">正在打开 tun 设备：</string>
    <string name="local_ip_info">本地 IPv4： %1$s/%2$d IPv6： %3$s MTU： %4$d</string>
    <string name="dns_server_info">DNS 服务器: %1$s, 域名: %2$s</string>
    <string name="routes_info_incl">路线: %1$s %2$s</string>
    <string name="routes_info_excl">排除的路由： %1$s %2$s</string>
    <string name="routes_debug">VpnService安装路线 : %1$s %2$s</string>
    <string name="ip_not_cidr">已获得接口信息 %1$s 以及 %2$s，将第二个地址作为远程地址。使用 /32 作为本地掩码。OpenVPN 给出的模式是 \"%3$s\"。</string>
    <string name="route_not_cidr">无法将 %1$s 和 %2$s 作为 CIDR 形式的路由，将使用 /32 的子网掩码。</string>
    <string name="route_not_netip">纠正路由 %1$s/%2$s 为 %3$s/%2$s</string>
    <string name="keychain_access">不能访问 Android 密钥链证书。这可能是由于固件升级或通过还原备份的应用程序/软件设置造成的。请尝试卸载并重装本软件。</string>
    <string name="version_info">%1$s v%2$s</string>
    <string name="no_vpn_support_image">很遗憾，您目前的系统不支持 VPN 服务接口</string>
    <string name="opentun_no_ipaddr">无 IP 信息，拒绝打开 tun 设备</string>
    <string name="pkcs12_file_encryption_key">PKCS12 文件加密密钥</string>
    <string name="private_key_password">私钥密码</string>
    <string name="password">密码</string>
    <string name="building_configration">正在生成配置</string>
    <string name="netstatus">网络状态： %s</string>
    <string name="keychain_nocacert">在 Android 密钥库中未找到任何 CA 证书。可能验证失败。</string>
    <string name="mobile_info">运行 %1$s （ %2$s ） %3$s ，Android API %4$d</string>
    <string name="error_rsa_sign">与 Android 密钥库 %1$s 签名时出错： %2$s</string>
    <string name="warn_no_dns">没有使用 DNS 服务器，无法解析域名，请考虑设置一个 DNS 服务器。请注意，即使你没有设置 DNS 服务器，你为移动网络以及 Wi-Fi 设置的代理服务器配置也是有效的。</string>
    <string name="dns_add_error">无法添加 DNS 服务器 \"%1$s\"，%2$s 拒绝了您的操作。</string>
    <string name="ip_add_error">无法配置 IP 地址 %1$s，被系统拒绝：%2$s</string>
    <string name="getproxy_error">获取代理设置时出错：%s</string>
    <string name="using_proxy">使用代理 %1$s %2$d</string>
    <string name="minidump_generated">OpenVPN 意外崩溃，您可以尝试重新连接。</string>
    <string name="notifcation_title">流量风暴 - %s</string>
    <string name="session_ipv4string">%1$s - %2$s</string>
    <string name="session_ipv6string">%1$s - %3$s, %2$s</string>
    <string name="state_connecting">连接中</string>
    <string name="state_wait">等待服务器响应</string>
    <string name="state_auth">验证中</string>
    <string name="state_get_config">正在获取客户端配置</string>
    <string name="state_assign_ip">正在分配 IP 地址</string>
    <string name="state_add_routes">添加路由</string>
    <string name="state_connected">已连接</string>
    <string name="state_disconnected">断开</string>
    <string name="state_reconnecting">正在重新连接</string>
    <string name="state_exiting">已断开</string>
    <string name="state_noprocess">未连接</string>
    <string name="state_resolve">正在解析主机名</string>
    <string name="state_tcp_connect">连接中</string>
    <string name="state_auth_failed">验证失败</string>
    <string name="state_nonetwork">等待可用网络</string>
    <string name="statusline_bytecount">↓%2$s/s (%1$s) - ↑%4$s/s (%3$s)</string>
    <string name="notifcation_title_notconnect">未连接</string>
    <string name="start_vpn_title">正在连接 VPN %s</string>
    <string name="start_vpn_ticker">正在连接 VPN %s</string>
    <string name="jelly_keystore_alphanumeric_bug">某些版本的 Android 4.1 存在问题，如果密钥库证书的名称包含非字母和数字字符(如空格、 下划线或短划线)。请尝试重新导入不包含特殊字符的证书</string>
    <string name="mobile_info_extended">当前运行环境 %1$s (%2$s) %3$s，Android API %4$d，版本 %5$s，%6$s</string>
    <string name="built_by">由 %s 构建</string>
    <string name="debug_build">调试版本</string>
    <string name="official_build">正式版本</string>
    <string name="screenoff_pause">屏幕关闭时暂停连接：若在%2$s秒内少于%1$s</string>
    <string name="screen_nopersistenttun">警告：该 VPN 没有启用“持久化 tun 设备”，当屏幕关闭时，网络流量将不走 VPN 隧道，而是走 Wi-Fi 或者移动网络。</string>
    <string name="save_password">保存密码</string>
    <string name="state_userpause">按用户要求暂停 VPN</string>
    <string name="state_unknownpause">VPN意外暂停，可能是出现了BUG</string>
    <string name="state_screenoff">VPN 暂停 - 屏幕关闭</string>
    <string name="cannotparsecert">无法显示证书信息</string>
    <string name="show_password">显示密码</string>
    <string name="keyChainAccessError">密钥链访问错误： %s</string>
    <string name="unhandled_exception">未处理的异常： %1$s\n\n%2$s</string>
    <string name="unhandled_exception_context">%3$s: %1$s\n\n%2$s</string>
    <string name="full_licenses">完整授权</string>
    <string name="ip_looks_like_subnet">IP配置信息 %1$s %2$s 与VPN拓扑类型“%3$s”不符，自动改为“subnet”类型。</string>
    <string name="allowed_vpn_apps_info">允许 VPN 应用程序： %1$s</string>
    <string name="disallowed_vpn_apps_info">不允许VPN应用：%1$s</string>
    <string name="app_no_longer_exists">从应用程序允许禁止列表中移除它，不再安装包 %s</string>
    <string name="remote_no_server_selected">您需要至少定义并启用一个远程服务器。</string>
    <string name="ignore_multicast_route">忽略多播路由:%s</string>

    <string name="state_user_vpn_permission">请勾选“信任此应用”并确定</string>
    <string name="state_user_vpn_password">请输入密码</string>
    <string name="state_user_vpn_password_cancelled">您未输入密码</string>
    <string name="state_user_vpn_permission_cancelled">您取消了VPN连接</string>

    <string name="state_prepare">准备中</string>
    <string name="state_profile_error">线路配置出错，请更换线路</string>
    <string name="state_profile_nochoose">请选择线路</string>
    <string name="state_profile_ioerror">线路配置读取失败，请更换线路</string>
    <string name="state_start_vpn">启动VPN服务</string>
    <string name="statusline_upload">上传: %1$s - %2$s/s</string>
    <string name="statusline_download">下载: %1$s - %2$s/s</string>
    <string name="accountstate_nochoose">账号</string>
    <!--<string name="accountstate_nochoose">未设置</string>-->
    <string name="profilestate_nochoose">线路</string>
    <!--<string name="profilestate_nochoose">未选择</string>-->
    <string name="enter_password">请输入密码</string>
    <string name="need_password">需要%1$s</string>
    <string name="setting_account">设置账号</string>
    <string name="account_saved">账号已保存</string>
    <string name="account_not_save">账号未保存</string>
    <string name="about_notice">本软件（流量风暴）基于开源项目 OpenVPN for Android，采用与其一致的GPLv2协议授权。</string>
    <string name="about_sourcecode">请前往 https://github.com/SwimmingTiger/flowmaster 查看源码或提供问题反馈。</string>
    <string name="about_openvpn_for_android">OpenVPN for Android</string>

    <string name="service_restarted">服务重启中… (应用可能因内存不足而被系统终止)</string>
    <string name="unknown_state">未知状态</string>

    <string name="copyright_blinktgui">Copyright 2012–2014 Arne Schwabe &lt;arne@rfc2549.org></string>
    <string name="opevpn_copyright">Copyright © 2002–2010 OpenVPN Technologies, Inc. &lt;sales@openvpn.net>\n

	  "OpenVPN" is a trademark of OpenVPN Technologies, Inc.</string>
    <string name="copyright_file_dialog">File Dialog based on work by Alexander Ponomarev</string>
    <string name="lzo_copyright">Copyright © 1996 – 2011 Markus Franz Xaver Johannes Oberhumer</string>
    <string name="copyright_openssl">        This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit\n
        Copyright © 1998-2008 The OpenSSL Project. All rights reserved.\n\n
        This product includes cryptographic software written by Eric Young (eay@cryptsoft.com)\n
        Copyright © 1995-1998 Eric Young (eay@cryptsoft.com) All rights reserved.</string>
    <string name="openvpn">OpenVPN</string>
    <string name="file_dialog">File Dialog</string>
    <string name="lzo">LZO</string>
    <string name="openssl">OpenSSL</string>
    <string name="bouncy_castle">Bouncy Castle Crypto APIs</string>
    <string name="copyright_bouncycastle">Copyright © 2000–2012 The Legion Of The Bouncy Castle (http://www.bouncycastle.org)</string>
    <string name="unsupported_abi">您需要安装%1$s版的%2$s</string>
    <string name="choose_profile">选择线路</string>
    <string name="http_proxy_error">网关错误：</string>
    <string name="profile_read_error">线路配置读取失败</string>
    <string name="profile_parse_error">线路配置解析错误</string>
    <string name="profile_cannot_write">线路配置无法写入</string>
    <string name="profile_cannot_open">线路配置无法打开</string>
    <string name="log_time_format">"[HH:mm:ss] "</string>
    <string name="account_save_failed">"账号保存失败: %1$s"</string>
    <string name="debug_log_file">/flowmaster_log.debug.txt</string>
    <string name="account">账号</string>
    <string name="profile">线路</string>
    <string name="connect_disconnect">连接/断开</string>
    <string name="version_name">大众版</string>
    <string name="release_name">henan</string>
    <string name="error_timeout">网络超时</string>
    <string name="error_no_internet">无可用网络</string>
    <string name="error_server_stop">服务器无响应</string>
    <string name="net_error">网络异常</string>
    <string name="version_update_context">修复bug</string>

    <!-- nobind -->
</resources>
