<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012-2014 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/stdpadding"
            android:paddingRight="@dimen/stdpadding"
            android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="SelectableText"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/about_notice"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/about_sourcecode"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_others"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_openvpn_for_android"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/copyright_blinktgui"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openvpn"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opevpn_copyright"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_dialog"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_file_dialog"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lzo"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lzo_copyright"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openssl"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_openssl"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouncy_castle"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_bouncycastle"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_licenses"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</ScrollView>
