<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:background="#006aea"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvw_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/version_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@id/layout_bottom"
        android:background="#a5b1bd"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_button"
                android:onClick="btnAccountOnClick"
                android:text="账  户"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvw_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountstate_nochoose" />

            <TextView
                android:id="@+id/tvw_counter_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_button"
                android:contentDescription="@string/profile"
                android:onClick="btnProfileOnClick"
                android:text="线  路"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvw_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profilestate_nochoose" />

            <TextView
                android:id="@+id/tvw_counter_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_button"
                android:contentDescription="@string/connect_disconnect"
                android:onClick="btnConnectOnClick"
                android:text="连  接"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvw_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state_noprocess" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_pager"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_above="@id/layout_user">


        <com.hnxy.hxy.app.flowstorm.autoscallviewpager.AutoScrollViewPager
            android:id="@+id/asvp_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_pager1"
                android:layout_width="15dp"
                android:layout_height="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/pager_current" />

            <ImageView
                android:id="@+id/iv_pager2"
                android:layout_width="15dp"
                android:layout_height="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/pager_other" />

            <ImageView
                android:id="@+id/iv_pager3"
                android:layout_width="15dp"
                android:layout_height="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/pager_other" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/bg_home_center"
            android:scaleType="center" />
    </RelativeLayout>

</RelativeLayout>