<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:background="#006aea"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvw_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/version_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_above="@id/layout_bottom"
        android:background="#a5b1bd"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/view_account"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:onClick="btnAccountOnClick">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/bg_round_blue" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/icon_user" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvw_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/accountstate_nochoose"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvw_counter_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/view_line"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:onClick="btnProfileOnClick">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/bg_round_blue" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:padding="1dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/icon_line" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvw_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profilestate_nochoose"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvw_counter_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/view_conn"
                android:layout_width="75dp"
                android:layout_height="75dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="btnConnectOnClick"
                    android:src="@drawable/bg_round_blue" />

                <ImageView
                    android:id="@+id/iv_conn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/icon_conn" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvw_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/state_noprocess"
                android:maxLines="2"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_pager"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_above="@id/layout_user">


        <com.hnxy.hxy.app.flowstorm.autoscallviewpager.AutoScrollViewPager
            android:id="@+id/asvp_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_pager1"
                android:layout_width="15dp"
                android:layout_height="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/pager_current" />

            <ImageView
                android:id="@+id/iv_pager2"
                android:layout_width="15dp"
                android:layout_height="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/pager_other" />

            <ImageView
                android:id="@+id/iv_pager3"
                android:layout_width="15dp"
                android:layout_height="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/pager_other" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/bg_home_center"
            android:scaleType="center" />
    </RelativeLayout>

</RelativeLayout>